--- a/package.json
+++ b/package.json
@@ -7,19 +7,51 @@
     "vscode": "^1.98.0"
   },
   "categories": [
-    "Programming Languages"
+    "Other"
   ],
+  "activationEvents": [
+    "onLanguage:semanticLanguage"
+  ],
+  "main": "./out/extension.js",
   "contributes": {
-    "languages": [{
-      "id": "dreamknot",
-      "aliases": ["DreamKnot", "dreamknot"],
-      "extensions": [".dk"],
-      "configuration": "./language-configuration.json"
-    }],
-    "grammars": [{
-      "language": "dreamknot",
-      "scopeName": "source.dreamknot",
-      "path": "./syntaxes/dreamknot.tmLanguage.json"
-    }]
+    "commands": [],
+    "languages": [
+      {
+        "id": "dreamknot",
+        "aliases": [
+          "DreamKnot",
+          "dreamknot"
+        ],
+        "extensions": [
+          ".dk"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "snippets": [
+      {
+        "language": "dreamknot",
+        "path": "./snippets.json"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile && npm run lint",
+    "lint": "eslint src",
+    "test": "vscode-test"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.98.0",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "20.x",
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
+    "eslint": "^9.21.0",
+    "typescript": "^5.7.3",
+    "@vscode/test-cli": "^0.0.10",
+    "@vscode/test-electron": "^2.4.1"
   }
 }
